--- a/.github/workflows/system-file-changes.yml
+++ b/.github/workflows/system-file-changes.yml
@@ -7,8 +7,8 @@ name: System file changes
 on:
   pull_request_target:
     paths:
-      - '.github/workflows/**'
-      - '.github/CODEOWNERS'
+      - ".github/workflows/**"
+      - ".github/CODEOWNERS"
 
 jobs:
   block:
