--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "url": "git+https://github.com/mdn/translated-content.git"
   },
   "scripts": {
-  },
-  "devDependencies": {
+    "fix:json": "prettier -w \"**/*.json\"",
+    "lint:json": "prettier -c \"**/*.json\""
   },
   "engines": {
     "node": "^16.0.0 || >=18.0.0"
+  },
+  "dependencies": {
+    "prettier": "2.7.1"
   }
 }
