--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -14,20 +14,51 @@ on:
 jobs:
   tests:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v3
-        # Needed otherswise it will check out a merge commit which means
-        # you can't get a `git diff` for this PR compared to its base.
-        # with:
-        #   ref: ${{ github.event.pull_request.head.sha }}
+      - name: Diffset
+        id: diffset
+        uses: softprops/diffset@v1
+        with:
+          base: ${{ github.base_ref }}
+          document_files: |
+            files/**/*.html
+            files/**/*.md
+          image_files: |
+            files/**/*.png
+            files/**/*.jpeg
+            files/**/*.jpg
+            files/**/*.gif
+            files/**/*.svg
+            files/**/*.webp
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Check file changes
+        if: steps.diffset.outputs.document_files || steps.diffset.outputs.image_files
+          run: |
+            echo "FILE_CHANGE=true" >> ${GITHUB_ENV}
+            echo "GIT_DIFF_CONTENT=${{ steps.diffset.outputs.document_files }}" >> ${GITHUB_ENV}
+            echo "GIT_DIFF_IMAGES=${{ steps.diffset.outputs.image_files }}" >> ${GITHUB_ENV}
+
+      - name: Print diffset
+        if: ${{ env.FILE_CHANGE }}
+        run: |
+          # print changed documents
+          echo "changed documents: ${{ env.GIT_DIFF_CONTENT }}"
+          # print changed images
+          echo "changed images: ${{ env.GIT_DIFF_IMAGES }}"
 
       - uses: actions/checkout@v3
+        if: env.FILE_CHANGE
+
+      - uses: actions/checkout@v3
+        if: env.FILE_CHANGE
         with:
           repository: mdn/content
           path: mdn/content
 
       - name: Setup Node.js environment
+        if: env.FILE_CHANGE
         uses: actions/setup-node@v3
         with:
           node-version: "16"
@@ -35,39 +66,13 @@ jobs:
           cache-dependency-path: mdn/content/yarn.lock
 
       - name: Install all yarn packages
+        if: env.FILE_CHANGE
         working-directory: ${{ github.workspace }}/mdn/content
         run: |
           yarn --frozen-lockfile
 
-      - name: Config git core.quotePath
-        run: |
-          # If you don't do this, the get-diff-action won't be able to
-          # notice files that contain non-ascii characters.
-          # I.e.
-          #
-          #    ▶ git status
-          #    Changes not staged for commit:
-          #    ...
-          #   modified:   "files/en-us/glossary/b\303\251zier_curve/index.html"
-          #
-          # But after you set `core.quotePath` you get:
-          #
-          #    ▶ git status
-          #    Changes not staged for commit:
-          #    ...
-          #   modified:   "files/en-us/glossary/bézier_curve/index.html"
-          #
-          # Now, this gets used by the `git diff ...` inside get-diff-action.
-          git config --global core.quotePath false
-
-      - uses: technote-space/get-diff-action@v6
-        id: git_diff_content
-        with:
-          PATTERNS: files/**/*.+(html|md)
-          SET_ENV_NAME: GIT_DIFF_CONTENT
-
       - name: Build changed content
-        if: ${{ env.GIT_DIFF_CONTENT }}
+        if: env.GIT_DIFF_CONTENT
         env:
           CONTENT_ROOT: ${{ github.workspace }}/mdn/content/files
           CONTENT_TRANSLATED_ROOT: ${{ github.workspace }}/files
@@ -122,7 +127,7 @@ jobs:
           # Save the PR number into the build
           echo ${{ github.event.number }} > $BUILD_OUT_ROOT/NR
 
-      - name: Generate the diff file
+      - name: Download the diff file
         if: ${{ env.GIT_DIFF_CONTENT }}
         env:
           # This must match what we set in the "Build changed content" step above
@@ -132,7 +137,7 @@ jobs:
           # directory.
           # The purpose of this is for the PR Review Companion to later
           # be able to use this raw diff file for the benefit of analyzing.
-          git diff --diff-filter=ACMRT ${{ github.event.pull_request.base.sha }} ${{ github.sha }} > $BUILD_OUT_ROOT/DIFF
+          gh pr diff ${{ github.event.number }} > $BUILD_OUT_ROOT/DIFF
 
       - name: Merge static assets with built documents
         if: ${{ env.GIT_DIFF_CONTENT }}
@@ -161,19 +166,20 @@ jobs:
           name: build
           path: ${{ env.BUILD_OUT_ROOT }}
 
-      - uses: technote-space/get-diff-action@v6
-        with:
-          PATTERNS: files/**/*.+(png|jpeg|jpg|gif|svg|webp)
-          ABSOLUTE: true
-          SET_ENV_NAME: GIT_DIFF_FILES
+      - name: Get changed images
+        if: ${{ env.GIT_DIFF_CONTENT }}
+        # note that we should get the absolute path of the changed images
+        run: |
+          DIFF_IMAGES=$(echo ${{ env.GIT_DIFF_IMAGES }} | | tr -s " " "\n" | xargs readlink -e | tr "\n" " ")
+          echo "GIT_DIFF_IMAGES=$DIFF_IMAGES" >> $GITHUB_ENV
 
       - name: Check changed files
-        if: ${{ env.GIT_DIFF_FILES }}
+        if: ${{ env.GIT_DIFF_IMAGES }}
         env:
           CONTENT_ROOT: ${{ github.workspace }}/mdn/content/files
           CONTENT_TRANSLATED_ROOT: ${{ github.workspace }}/files
         working-directory: ${{ github.workspace }}/mdn/content
         run: |
-          echo ${{ env.GIT_DIFF_FILES }}
+          echo ${{ env.GIT_DIFF_IMAGES }}
 
-          yarn filecheck ${{ env.GIT_DIFF_FILES }}
+          yarn filecheck ${{ env.GIT_DIFF_IMAGES }}
