--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -56,6 +56,7 @@
 # TRANSLATION GUIDE OWNER(S)
 # ----------------------------------------------------------------------------
 /docs/        @mdn/core-yari-content
+/docs/es/     @mdn/yari-content-es
 /docs/ko/     @mdn/yari-content-ko
 /docs/ru/     @mdn/yari-content-ru
 /docs/zh-cn/  @mdn/yari-content-zh
