--- a/.github/ISSUE_TEMPLATE/page-report-es.yml
+++ b/.github/ISSUE_TEMPLATE/page-report-es.yml
@@ -1,4 +1,4 @@
-name: "[via MDN pages only]"
+name: "[via MDN pages only // es]"
 description: Issue filed via "Report a problem with this content on GitHub" link on MDN pages.
 labels: ["l10n-es", "needs triage"]
 body:
