--- a/.github/ISSUE_TEMPLATE/page-report-ko.yml
+++ b/.github/ISSUE_TEMPLATE/page-report-ko.yml
@@ -1,4 +1,4 @@
-name: "[via MDN pages only]"
+name: "[via MDN pages only // ko]"
 description: Issue filed via "Report a problem with this content on GitHub" link on MDN pages.
 labels: ["l10n-ko", "needs triage"]
 body:
