--- a/.github/ISSUE_TEMPLATE/page-report-pt-br.yml
+++ b/.github/ISSUE_TEMPLATE/page-report-pt-br.yml
@@ -1,4 +1,4 @@
-name: "[via MDN pages only]"
+name: "[via MDN pages only // pt-br]"
 description: Issue filed via "Report a problem with this content on GitHub" link on MDN pages.
 labels: ["l10n-pt-br", "needs triage"]
 body:
