--- a/.github/ISSUE_TEMPLATE/page-report-zh-tw.yml
+++ b/.github/ISSUE_TEMPLATE/page-report-zh-tw.yml
@@ -1,4 +1,4 @@
-name: "[via MDN pages only]"
+name: "[via MDN pages only // zh-tw]"
 description: Issue filed via "Report a problem with this content on GitHub" link on MDN pages.
 labels: ["l10n-zh", "needs triage"]
 body:
