--- a/.github/ISSUE_TEMPLATE/page-report-es.yml
+++ b/.github/ISSUE_TEMPLATE/page-report-es.yml
@@ -7,7 +7,7 @@ body:
       value: |
         ### Antes de comenzar
 
-        **¿Quiere cambiar esta página por usted mismo?** ¡Este contenido es de código abierto!
+        **¿Quiere cambiar esta página usted mismo?** ¡Este contenido es de código abierto!
         ↩ Regrese y use el enlace _Editar en GitHub_ en la página.
 
         **¿El problema es acerca de la tabla de compatibilidad con los navegadores?**
