--- a/.github/ISSUE_TEMPLATE/page-report-es.yml
+++ b/.github/ISSUE_TEMPLATE/page-report-es.yml
@@ -8,7 +8,7 @@ body:
         ### Antes de comenzar
 
         **¿Quiere cambiar esta página usted mismo?** ¡Este contenido es de código abierto!
-        ↩ Regrese y use el enlace _Editar en GitHub_ en la página.
+        ↩ Regrese a la página y use el enlace _Editar en GitHub_.
 
         **¿El problema es acerca de la tabla de compatibilidad con los navegadores?**
         ↩ Regrese y use el enlace _Reportar problemas con los datos de compatibilidad en GitHub_ en la página.
