--- a/.github/ISSUE_TEMPLATE/page-report-es.yml
+++ b/.github/ISSUE_TEMPLATE/page-report-es.yml
@@ -11,7 +11,7 @@ body:
         ↩ Regrese a la página y use el enlace _Editar en GitHub_.
 
         **¿El problema es acerca de la tabla de compatibilidad con los navegadores?**
-        ↩ Regrese y use el enlace _Reportar problemas con los datos de compatibilidad en GitHub_ en la página.
+        ↩ Regrese a la página y use el enlace _Reportar problemas con los datos de compatibilidad en GitHub_.
 
         **¿Necesita ayuda con su navegador?**
         🙋 Para obtener ayuda con [Firefox](https://support.mozilla.org/en-US/kb/file-bug-report-or-feature-request-mozilla), [Chrome](https://support.google.com/chrome/answer/95315?hl=en-GB&ref_topic=7439544), [Safari](https://www.apple.com/feedback/safari.html), o algún otro navegador, visite la página de soporte del navegador.
