--- a/.github/ISSUE_TEMPLATE/page-report-es.yml
+++ b/.github/ISSUE_TEMPLATE/page-report-es.yml
@@ -49,7 +49,7 @@ body:
     id: more-info
     attributes:
       label: ¿Tiene algo más que quiera compartir?
-      description: Por ejemplo, pasos para reproducir el error, capturas o grabaciones de pantalla, o algún código de ejemplo.
+      description: Por ejemplo, pasos para reproducir el error, capturas, grabaciones de pantalla, o algún código de ejemplo.
   - type: markdown
     attributes:
       value: |
