--- a/.github/ISSUE_TEMPLATE/page-report-es.yml
+++ b/.github/ISSUE_TEMPLATE/page-report-es.yml
@@ -59,4 +59,4 @@ body:
     id: metadata
     attributes:
       label: MDN metadata
-      description: Se establece automáticamente. No la modifique.
+      description: Se establece automáticamente. No modificar.
