--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -14,6 +14,7 @@ on:
 jobs:
   tests:
     runs-on: ubuntu-latest
+
     steps:
       - name: Diffset
         id: diffset
@@ -35,13 +36,13 @@ jobs:
 
       - name: Check file changes
         if: steps.diffset.outputs.document_files || steps.diffset.outputs.image_files
-          run: |
-            echo "FILE_CHANGE=true" >> ${GITHUB_ENV}
-            echo "GIT_DIFF_CONTENT=${{ steps.diffset.outputs.document_files }}" >> ${GITHUB_ENV}
-            echo "GIT_DIFF_IMAGES=${{ steps.diffset.outputs.image_files }}" >> ${GITHUB_ENV}
+        run: |
+          echo "FILE_CHANGE=true" >> ${GITHUB_ENV}
+          echo "GIT_DIFF_CONTENT=${{ steps.diffset.outputs.document_files }}" >> ${GITHUB_ENV}
+          echo "GIT_DIFF_IMAGES=${{ steps.diffset.outputs.image_files }}" >> ${GITHUB_ENV}
 
       - name: Print diffset
-        if: ${{ env.FILE_CHANGE }}
+        if: env.FILE_CHANGE
         run: |
           # print changed documents
           echo "changed documents: ${{ env.GIT_DIFF_CONTENT }}"
