--- a/.markdownlint-cli2.jsonc
+++ b/.markdownlint-cli2.jsonc
@@ -128,7 +128,20 @@
     // -> Disabled, as yari generates link fragments by replacing spaces with underscores, not dashes.
     "MD051": false,
     // Incompatible with brackets in macros like MD042
-    "MD052": false
+    "MD052": false,
+    "search-replace": {
+      "rules": [
+        // This will be replaced with Prettier in the long run
+        {
+          "name": "double-spaces",
+          "message": "Avoid double spaces",
+          "searchPattern": "/([^\\s>])  ([^\\s|])/g",
+          "replace": "$1 $2",
+          "skipCode": true
+        }
+      ]
+    }
   },
+  "customRules": ["markdownlint-rule-search-replace"],
   "ignores": ["node_modules", "**/conflicting/**", "**/orphaned/**", ".github/", "files/**/web/api/window/frames/index.md"]
 }
