chore: enable MD050

--- a/.markdownlint-cli2.jsonc
+++ b/.markdownlint-cli2.jsonc
@@ -122,8 +122,9 @@
     },
     // MD049 is set to underscore upstream, not yet fixed here
     "MD049": false,
-    // MD050 is set to asterisk upstream, not yet fixed here
-    "MD050": false,
+    "MD050": {
+      "style": "asterisk"
+    },
     // MD051 - Link fragments should be valid.
     // -> Disabled, as yari generates link fragments by replacing spaces with underscores, not dashes.
     "MD051": false,
