--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -15,7 +15,6 @@ jobs:
   tests:
     runs-on: ubuntu-latest
     env:
-      CHANGED_FILES: /tmp/changed-files.txt
       BASE_SHA: ${{ github.event.pull_request.base.sha }}
       HEAD_SHA: ${{ github.event.pull_request.head.sha }}
 
@@ -47,16 +46,20 @@ jobs:
         run: |
           # Use the GitHub API to get the list of changed files
           # documenation: https://docs.github.com/rest/commits/commits#compare-two-commits
-          gh api repos/{owner}/{repo}/compare/${{ env.BASE_SHA }}...${{ env.HEAD_SHA }} \
+          DIFF_DOCUMENTS=$(gh api repos/{owner}/{repo}/compare/${{ env.BASE_SHA }}...${{ env.HEAD_SHA }} \
             --paginate \
-            --jq '.files | .[] | select(.status|IN("added", "modified", "renamed", "copied", "changed")) | .filename' > ${{ env.CHANGED_FILES }}
+            --jq '.files | .[] | select(.status|IN("added", "modified", "renamed", "copied", "changed")) | .filename')
+
+          # filter out files that are not markdown or html
+          GIT_DIFF_CONTENT=$(echo "${DIFF_DOCUMENTS}" | egrep -i "^files/.*\.(html|md)$" | xargs)
+          echo "GIT_DIFF_CONTENT=${GIT_DIFF_CONTENT}" >> $GITHUB_ENV
+
+          # filter out files that are not images
+          # note that we should get the absolute path of the changed images
+          GIT_DIFF_IMAGES=$(echo "${DIFF_DOCUMENTS}" | egrep -i "^files/.*\.(png|jpeg|jpg|gif|svg|webp)$" | xargs readlink -e | tr "\n" " ")
+          echo "GIT_DIFF_IMAGES=${GIT_DIFF_IMAGES}" >> $GITHUB_ENV
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Get changed documents
-        run: |
-          DIFF_DOCUMENTS=$(cat ${{ env.CHANGED_FILES }} | egrep -i "^files/.*/.*\.(html|md)$" | tr "\n" " ")
-          echo "GIT_DIFF_CONTENT=$DIFF_DOCUMENTS" >> $GITHUB_ENV
 
       - name: Build changed content
         if: ${{ env.GIT_DIFF_CONTENT }}
@@ -152,13 +155,6 @@ jobs:
         with:
           name: build
           path: ${{ env.BUILD_OUT_ROOT }}
-
-      - name: Get changed images
-        if: ${{ env.GIT_DIFF_CONTENT }}
-        run: |
-          # note that we should get the absolute path of the changed images
-          DIFF_IMAGES=$(cat ${{ env.CHANGED_FILES }} | egrep -i "^files/.*/.*\.(png|jpeg|jpg|gif|svg|webp)$" | xargs readlink -e | tr "\n" " ")
-          echo "GIT_DIFF_IMAGES=$DIFF_IMAGES" >> $GITHUB_ENV
 
       - name: Check changed files
         if: ${{ env.GIT_DIFF_IMAGES }}
