--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -54,10 +54,10 @@ jobs:
           GIT_DIFF_CONTENT=$(echo "${DIFF_DOCUMENTS}" | egrep -i "^files/.*\.(html|md)$" | xargs)
           echo "GIT_DIFF_CONTENT=${GIT_DIFF_CONTENT}" >> $GITHUB_ENV
 
-          # filter out files that are not images
-          # note that we should get the absolute path of the changed images
-          GIT_DIFF_IMAGES=$(echo "${DIFF_DOCUMENTS}" | egrep -i "^files/.*\.(png|jpeg|jpg|gif|svg|webp)$" | xargs readlink -e | tr "\n" " ")
-          echo "GIT_DIFF_IMAGES=${GIT_DIFF_IMAGES}" >> $GITHUB_ENV
+          # filter out files that are not attachments
+          # note that we should get the absolute path of the changed attachments
+          GIT_DIFF_FILES=$(echo "${DIFF_DOCUMENTS}" | egrep -i "^files/.*\.(png|jpeg|jpg|gif|svg|webp)$" | xargs readlink -e | tr "\n" " ")
+          echo "GIT_DIFF_FILES=${GIT_DIFF_FILES}" >> $GITHUB_ENV
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -157,12 +157,12 @@ jobs:
           path: ${{ env.BUILD_OUT_ROOT }}
 
       - name: Check changed files
-        if: ${{ env.GIT_DIFF_IMAGES }}
+        if: ${{ env.GIT_DIFF_FILES }}
         env:
           CONTENT_ROOT: ${{ github.workspace }}/mdn/content/files
           CONTENT_TRANSLATED_ROOT: ${{ github.workspace }}/files
         working-directory: ${{ github.workspace }}/mdn/content
         run: |
-          echo ${{ env.GIT_DIFF_IMAGES }}
+          echo ${{ env.GIT_DIFF_FILES }}
 
-          yarn filecheck ${{ env.GIT_DIFF_IMAGES }}
+          yarn filecheck ${{ env.GIT_DIFF_FILES }}
